# raph

./: .gitattributes  .gitignore  Brain.py  Branch.py  Console.py  Cursor.py  DGLParser.py  Dockerfile  Dungeon.py  Eeek.py  EeekObject.py  Findable.py  FramebufferParser.py  Hero.py  Inventory.py  Item.py  ItemDB.py  Kernel.py  Level.py  Monster.py  MonsterSpoiler.py  NethackSock.py  Pathing.py  Personality.py  Pipfile  README.md  Senses.py  SignalReceiver.py  SocketLogger.py  SocketObserver.py  TermColor.py  TestBrain.py  Tile.py  aicrowd.json  apt.txt  compile.sh  local_test.py  myconstants.py  nh.py  playtest.py  (+8 more)
Actions/: AttackMonster.py  Descend.py  DipForExcalibur.py  Eat.py  Explore.py  FixStatus.py  GetPhatz.py  OpenDoors.py  RandomWalk.py  RestoreHP.py  Search.py  SearchSpot.py
agents/: base.py  custom_agent.py  random_agent.py  rulebased_agent.py  torchbeast_agent.py
docs/: RUNTIME.md  SUBMISSION.md
envs/: __init__.py  batched_env.py  wrappers.py
latest/: checkpoint.tar  checkpoint_0.tar  config.yaml  fields.csv  logs.csv  meta.json
nethack_baselines/other_examples/: random_rollouts.py
nethack_baselines/torchbeast/: README.md  clean_tmp.sh  config.yaml  (+3 more)
nethack_raph/: Branch.py  Dungeon.py  Hero.py  Inventory.py  Item.py  Kernel.py  Level.py  Monster.py  Pathing.py  Senses.py  TestBrain.py  areas.py  myconstants.py  rl_wrapper.py  todo
nethack_raph/cpp/: CMakeLists.txt
nethack_raph/cpp/include/: algo.h
nethack_raph/cpp/src/: algo.cpp
notebooks/: Glossaries.ipynb  NetHackTutorial.ipynb  episode_renderer.ipynb  plots.ipynb
utility/: submit.sh
(+30 files in other folders)
